--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.11"
+    "typeorm": "^0.3.11",
+    "buffer-to-stream": "^1.0.0",
+    "cloudinary": "^1.35.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -67,7 +69,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/multer": "^1.4.7"
   },
   "jest": {
     "moduleFileExtensions": [
